# FanyIME

./: CMakeLists.txt  README.md  flypytblsqlite.cpp  flypytblsqlite.h  main.cpp
src/hook/: ime_hook.cpp  ime_hook.h
src/sqlite/: sqlite_wrapper.cpp  sqlite_wrapper.h  sqlite_wrapper.py
